[package]
name = "mceliece"
version = "0.1.0"
authors = ["Floyd Zweydinger <floyd.zweydinger@rub.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accel = { version = "0.4.0-alpha.0", path = "/home/duda/Downloads/programming/cuda/rust_cuda_accel_test/deps/accel/accel" }
cuda-driver-sys = "0.3.0"
derive-new = "0.5.8"

m4ri-rust={ path = "deps/m4ri-rust/m4ri-rust", version="0.4.0" }
m4ri-sys={ path = "deps/m4ri-rust/m4ri-sys", version="0.3.2" }
rand="0.8.3"
serde = { version = "1.0", optional = true, features=["derive"] }
vob = "2.0.6"
bit-array = "0.4.4"
typenum = "1.12.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "prange"
harness = false
debug = true

[profile.release]
lto = "fat"
codegen-units = 1
rustflags="-C target-cpu=native"
panic = "abort"
