file(GLOB TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
foreach(testfile ${TEST_SOURCES})
    file(RELATIVE_PATH filename ${CMAKE_CURRENT_SOURCE_DIR} ${testfile})
    string(REPLACE ".cpp" "" file ${filename})
    add_executable(${file} ${testfile})
    target_compile_options(${file} PUBLIC ${COMPILE_TEST_FLAGS})
#    add_dependencies(${file} cryptanalysislib_project)
    target_link_libraries(${file}  ${LINK_TEST_FLAGS})
endforeach(testfile ${TEST_SOURCES})
# target_link_libraries(test_decoding)