file(GLOB TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

foreach(testfile ${TEST_SOURCES})
    file(RELATIVE_PATH filename ${CMAKE_CURRENT_SOURCE_DIR} ${testfile})
    string(REPLACE ".cpp" "" file ${filename})
    add_executable(mceliece_${file} ${testfile})
    target_compile_options(mceliece_${file} PUBLIC ${COMPILE_TEST_FLAGS})
    #add_dependencies(mceliece_${file} cryptanalysislib_project)
    target_link_libraries(mceliece_${file} ${LINK_TEST_FLAGS} ${TCMALLOC_LIBRARIES})
endforeach(testfile ${TEST_SOURCES})

if(USE_CUDA)
file(GLOB TEST_CUDA_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cu)
foreach(testfile ${TEST_CUDA_SOURCES})
    file(RELATIVE_PATH filename ${CMAKE_CURRENT_SOURCE_DIR} ${testfile})
    string(REPLACE ".cu" "" file ${filename})
    add_executable(cuda_mceliece_${file} ${testfile})
    target_compile_options(cuda_mceliece_${file} PUBLIC ${COMPILE_TEST_FLAGS} -DDEBUG)
    target_link_libraries(cuda_mceliece_${file} ${LINK_TEST_FLAGS})
endforeach(testfile ${TEST_CUDA_SOURCES})
endif()