file(GLOB TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

foreach(testfile ${TEST_SOURCES})
    file(RELATIVE_PATH filename ${CMAKE_CURRENT_SOURCE_DIR} ${testfile})
    string(REPLACE ".cpp" "" file ${filename})
    add_executable(mceliece_${file} ${testfile})
    target_compile_options(mceliece_${file} PUBLIC ${COMPILE_TEST_FLAGS})
    #add_dependencies(mceliece_${file} cryptanalysislib_project)
    target_link_libraries(mceliece_${file} ${LINK_TEST_FLAGS} ${TCMALLOC_LIBRARIES})
endforeach(testfile ${TEST_SOURCES})


if(USE_SCLANG)
    use_sclang_compiler()
    foreach(testfile ${TEST_SOURCES})
        file(RELATIVE_PATH filename ${CMAKE_CURRENT_SOURCE_DIR} ${testfile})
        string(REPLACE ".cpp" "" file ${filename})
        add_executable(sclang_mceliece_${file} ${testfile})
        target_compile_options(sclang_mceliece_${file} PUBLIC ${COMPILE_TEST_FLAGS})
        target_link_libraries(sclang_mceliece_${file} ${LINK_TEST_FLAGS} ${TCMALLOC_LIBRARIES})
    endforeach(testfile ${TEST_SOURCES})
    use_host_compiler()
endif()

if(USE_CUDA)
    add_subdirectory("cuda")
endif()
add_subdirectory(bjmm)
add_subdirectory(prange)
#TODO add_subdirectory(pcs)
#TODO add_subdirectory(sieving)
add_subdirectory(stern)
add_subdirectory(mo)
